--- a/package.json
+++ b/package.json
@@ -40,14 +40,26 @@
     "changelog:alpha": "standard-version --prerelease alpha && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.1",
+    "@nestjs/typeorm": "^9.0.1",
+    "cache-manager": "^4.1.0",
+    "cache-manager-redis-store": "^2.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "module-alias": "^2.2.2",
+    "mongodb": "^3.7.3",
+    "redis": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.9",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
@@ -56,7 +68,9 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cache-manager": "^4.0.2",
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.3",
     "@types/jest": "28.1.8",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.0.0",
@@ -64,6 +78,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "auto-changelog": "^2.4.0",
+    "commitlint": "^17.1.2",
     "coveralls": "^3.1.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
@@ -72,6 +87,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.1",
+    "faker": "5.5.3",
+    "faker-br": "^0.4.1",
     "git-commit-msg-linter": "^4.1.3",
     "git-cz": "^4.9.0",
     "husky": "^8.0.1",
@@ -80,6 +97,7 @@
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^13.0.3",
     "mockdate": "^3.0.5",
+    "mongodb-memory-server": "^8.9.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "standard-version": "^9.5.0",
