--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "joi": "^17.6.0",
     "module-alias": "^2.2.2",
     "mongodb": "^3.7.3",
     "redis": "^4.3.0",
