feat: app base config

--- a/example.env
+++ b/example.env
@@ -3,6 +3,9 @@ APP_NAME=nestjs-startkit
 APP_DESCRIPTION=Nestjs Startkit
 APP_VERSION=0.0.0
 APP_PORT=3000
+APP_BASE_URL=http://localhost:3000
+APP_BASE_URI=/api
+APP_DOCS_URI=${APP_BASE_URI}/docs
 # Throttler Settings
 THROTTLER_TTL=60
 THROTTLER_LIMIT=100
