--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.1",
+    "@nestjs/terminus": "^9.1.1",
     "@nestjs/typeorm": "^9.0.1",
     "cache-manager": "^4.1.0",
     "cache-manager-redis-store": "^2.0.0",
