refactor: use yarn as package manager

--- a/package.json
+++ b/package.json
@@ -21,17 +21,18 @@
     "build": "nest build",
     "check": "npx npm-check -s -u",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "export NODE_ENV=development && ts-node-dev --respawn --transpile-only --ignore-watch node_modules -r tsconfig-paths/register ./src/main.ts --inspect=0.0.0.0:9229",
+    "start:dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules -r tsconfig-paths/register ./src/main.ts",
+    "start:debug": "ts-node-dev --respawn --transpile-only --inspect=0.0.0.0:9229 --ignore-watch node_modules -r tsconfig-paths/register ./src/main.ts",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint:staged": "eslint --fix",
-    "test": "export NODE_ENV=test && export TS_NODE_DEV=true && node --trace-warnings -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --passWithNoTests --maxWorkers=4 --no-cache --detectOpenHandles --forceExit",
-    "test:unit": "npm test -- --config ./jest-unit.config.js",
-    "test:staged": "npm test -- --config ./jest-unit.config.js --findRelatedTests",
-    "test:watch": "npm test -- --watch --config ./jest-unit.config.js",
-    "test:cov": "npm test -- --coverage --config ./jest-unit.config.js",
+    "test": "node --trace-warnings -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --passWithNoTests --no-cache --detectOpenHandles --forceExit",
+    "test:unit": "yarn test --config ./jest-unit.config.js",
+    "test:staged": "yarn test --config ./jest-unit.config.js --findRelatedTests",
+    "test:watch": "yarn test --watch --config ./jest-unit.config.js",
+    "test:cov": "yarn test --coverage --config ./jest-unit.config.js",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --passWithNoTests --runInBand --no-cache --config ./jest-unit.config.js",
-    "test:e2e": "npm test -- --config ./jest-e2e.config.js",
+    "test:e2e": "yarn test --config ./jest-e2e.config.js",
     "release": "standard-version",
     "changelog": "standard-version && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
     "changelog:minor": "standard-version --release-as minor && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
@@ -48,19 +49,14 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.1",
     "@nestjs/terminus": "^9.1.1",
-    "@nestjs/typeorm": "^9.0.1",
-    "cache-manager": "^4.1.0",
-    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "joi": "^17.6.0",
+    "helmet": "^6.0.0",
     "module-alias": "^2.2.2",
-    "mongodb": "^3.7.3",
-    "redis": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.9",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -70,7 +66,6 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/cache-manager": "^4.0.2",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.3",
     "@types/jest": "28.1.8",
@@ -99,7 +94,6 @@
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^13.0.3",
     "mockdate": "^3.0.5",
-    "mongodb-memory-server": "^8.9.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "standard-version": "^9.5.0",
