refactor: improves on environment project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "esModuleInterop": true,
     "paths": {
       "@/*": ["src/*"],
-      "@/test": ["test/*"]
+      "@/test/*": ["test/*"]
     },
     "strict": true,
     "noImplicitOverride": true,
