--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,11 @@
 version: "3.7"
 services:
-
-  redis:
-    image: redis:latest
-    ports:
-      - 6379:6379
   
   start-kit:
     image: node:16-alpine
-    # build:
-    #   context: .
-    #   dockerfile: Dockerfile
     container_name: start-kit
     working_dir: /usr/src/app
-    command: ["npm", "run", "start"]
+    command: ["yarn", "start:dev"]
     expose:
       - 3000
       - 9229
@@ -21,4 +13,4 @@ services:
       - 3000:3000
       - 9229:9229
     volumes:
-      - ./:/usr/src/app
+      - ./:/usr/src/app:rw
