refactor: remove overload definitions

--- a/example.env
+++ b/example.env
@@ -1,25 +1,16 @@
 # App Settings
-APP_NAME=nestjs-startkit
-APP_DESCRIPTION=Nestjs Startkit
+APP_NAME=identity-access-manager
+APP_DESCRIPTION=Identity Access Manager
 APP_VERSION=0.0.0
 APP_PORT=3000
 APP_BASE_URL=http://localhost:3000
-APP_BASE_URI=/api
+APP_BASE_URI=/api/v1
 APP_DOCS_URI=${APP_BASE_URI}/docs
-# Throttler Settings
-THROTTLER_TTL=60
-THROTTLER_LIMIT=100
-# Cache Settings
-CACHE_STORE=redis
-CACHE_HOST=redis
-CACHE_PORT=6379
-CACHE_TTL=600
-# Database Settings
-DB_TYPE=mongodb
-DB_USERNAME=mongo
-DB_PASSWORD=mongo
-DB_HOST=mongo
-DB_PORT=27017
-DB_SSL=false
-DB_NAME=checkout
-DB_URL=${DB_TYPE}://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+# SQL Database Settings
+SQL_DB_TYPE=mysql
+SQL_DB_USERNAME=iam
+SQL_DB_PASSWORD=Secret*123
+SQL_DB_HOST=mysql
+SQL_DB_PORT=3306
+SQL_DATABASE=identity_access_manager
+SQL_DB_AUTO_LOAD_ENTITIES=true
