--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-startkit",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "NestJS Startkit",
   "author": {
     "name": "Mateus Macedo Dos Anjos",
@@ -21,42 +21,50 @@
     "build": "nest build",
     "check": "npx npm-check -s -u",
     "format": "prettier --write \"src/**/*.ts\"",
+    "test": "NODE_ENV=test && ts-node-dev -r tsconfig-paths/register --transpile-only --clear --ignore-watch node_modules node_modules/.bin/jest --passWithNoTests --runInBand --no-cache --detectOpenHandles --forceExit",
+    "test:unit": "npm run test -- --config ./jest-unit.config.js",
+    "test:staged": "npm run test -- --config ./jest-unit.config.js --findRelatedTests",
+    "test:watch": "npm run test -- --watch --config ./jest-unit.config.js",
+    "test:cov": "npm run test -- --coverage --config ./jest-unit.config.js",
+    "test:e2e": "npm run test -- --config ./jest-e2e.config.js",
     "start:dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules -r tsconfig-paths/register ./src/main.ts",
     "start:debug": "ts-node-dev --respawn --transpile-only --inspect=0.0.0.0:9229 --ignore-watch node_modules -r tsconfig-paths/register ./src/main.ts",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint:staged": "eslint --fix",
-    "test": "node --trace-warnings -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --passWithNoTests --no-cache --detectOpenHandles --forceExit",
-    "test:unit": "yarn test --config ./jest-unit.config.js",
-    "test:staged": "yarn test --config ./jest-unit.config.js --findRelatedTests",
-    "test:watch": "yarn test --watch --config ./jest-unit.config.js",
-    "test:cov": "yarn test --coverage --config ./jest-unit.config.js",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --passWithNoTests --runInBand --no-cache --config ./jest-unit.config.js",
-    "test:e2e": "yarn test --config ./jest-e2e.config.js",
+    "lint:staged": "eslint --fix",    
     "release": "standard-version",
     "changelog": "standard-version && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
     "changelog:minor": "standard-version --release-as minor && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
     "changelog:major": "standard-version --release-as major && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
     "changelog:patch": "standard-version --release-as patch && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
-    "changelog:alpha": "standard-version --prerelease alpha && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs"
+    "changelog:alpha": "standard-version --prerelease alpha && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
+    "typeorm:run-migrations": "npm run typeorm migration:run -- -d ./typeOrm.config.ts",
+    "typeorm:generate-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:generate ./src/database/migrations/$npm_config_name",
+    "typeorm:create-migration": "npm run typeorm -- migration:create ./src/database/migrations/$npm_config_name",
+    "typeorm:revert-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/cqrs": "^9.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.1",
     "@nestjs/terminus": "^9.1.1",
+    "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "joi": "^17.6.0",
     "helmet": "^6.0.0",
+    "joi": "^17.6.0",
     "module-alias": "^2.2.2",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.3.9",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -96,6 +104,7 @@
     "mockdate": "^3.0.5",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
+    "sqlite3": "^5.1.1",
     "standard-version": "^9.5.0",
     "supertest": "^6.1.3",
     "ts-jest": "^28.0.8",
