--- a/example.env
+++ b/example.env
@@ -1,16 +1,24 @@
 # App Settings
-APP_NAME=identity-access-manager
-APP_DESCRIPTION=Identity Access Manager
+APP_NAME=jc-customers-service
+APP_DESCRIPTION=JCPM Customers Service
 APP_VERSION=0.0.0
 APP_PORT=3000
 APP_BASE_URL=http://localhost:3000
 APP_BASE_URI=/api/v1
 APP_DOCS_URI=${APP_BASE_URI}/docs
-# SQL Database Settings
-SQL_DB_TYPE=mysql
-SQL_DB_USERNAME=iam
-SQL_DB_PASSWORD=Secret*123
-SQL_DB_HOST=mysql
-SQL_DB_PORT=3306
-SQL_DATABASE=identity_access_manager
-SQL_DB_AUTO_LOAD_ENTITIES=true
+#Database Settings
+DB_TYPE=mongodb
+DB_USERNAME=mongo
+DB_PASSWORD=mongo
+DB_HOST=mongo
+DB_PORT=27017
+DB_SSL=false
+DB_NAME=jc-customers-dev
+DB_AUTO_LOAD_ENTITIES=true
+DB_SYNCHRONIZE=true
+DB_USE_NEW_URL_PARSER=true
+DB_LOGGING=true
+DB_AUTO_LOAD_ENTITIES=true
+DB_URL=${DB_TYPE}://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+DB_USE_UNIFIED_TOPOLOGY=true
+
