--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "nestjs-startkit",
+  "name": "jc-customer-service",
   "version": "0.3.0",
-  "description": "NestJS Startkit",
+  "description": "JCPM Customer Service",
   "author": {
     "name": "Mateus Macedo Dos Anjos",
     "email": "macedodosanjosmateus@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mateusmacedo/nestjs-startkit.git"
+    "url": "https://gitlab.com/bossabox/jcpm-checkout/jc-customers-service.git"
   },
   "bugs": {
-    "url": "https://github.com/mateusmacedo/nestjs-startkit/issues",
+    "url": "https://gitlab.com/bossabox/jcpm-checkout/jc-customers-service/-/issues",
     "email": "macedodosanjosmateus@gmail.com"
   },
   "private": true,
@@ -21,7 +21,7 @@
     "build": "nest build",
     "check": "npx npm-check -s -u",
     "format": "prettier --write \"src/**/*.ts\"",
-    "test": "NODE_ENV=test && ts-node-dev -r tsconfig-paths/register --transpile-only --clear --ignore-watch node_modules node_modules/.bin/jest --passWithNoTests --runInBand --no-cache --detectOpenHandles --forceExit",
+    "test": "NODE_ENV=test && ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules node_modules/.bin/jest --passWithNoTests --runInBand --no-cache --detectOpenHandles --forceExit",
     "test:unit": "npm run test -- --config ./jest-unit.config.js",
     "test:staged": "npm run test -- --config ./jest-unit.config.js --findRelatedTests",
     "test:watch": "npm run test -- --watch --config ./jest-unit.config.js",
@@ -31,18 +31,13 @@
     "start:debug": "ts-node-dev --respawn --transpile-only --inspect=0.0.0.0:9229 --ignore-watch node_modules -r tsconfig-paths/register ./src/main.ts",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint:staged": "eslint --fix",    
+    "lint:staged": "eslint --fix",
     "release": "standard-version",
     "changelog": "standard-version && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
     "changelog:minor": "standard-version --release-as minor && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
     "changelog:major": "standard-version --release-as major && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
     "changelog:patch": "standard-version --release-as patch && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
-    "changelog:alpha": "standard-version --prerelease alpha && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
-    "typeorm:run-migrations": "npm run typeorm migration:run -- -d ./typeOrm.config.ts",
-    "typeorm:generate-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:generate ./src/database/migrations/$npm_config_name",
-    "typeorm:create-migration": "npm run typeorm -- migration:create ./src/database/migrations/$npm_config_name",
-    "typeorm:revert-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:revert"
+    "changelog:alpha": "standard-version --prerelease alpha && auto-changelog -p -u --commit-limit false --hide-credit --template changelog-template.hbs"
   },
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
@@ -60,7 +55,7 @@
     "helmet": "^6.0.0",
     "joi": "^17.6.0",
     "module-alias": "^2.2.2",
-    "mysql2": "^2.3.3",
+    "mongodb": "^3.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -104,7 +99,6 @@
     "mockdate": "^3.0.5",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
-    "sqlite3": "^5.1.1",
     "standard-version": "^9.5.0",
     "supertest": "^6.1.3",
     "ts-jest": "^28.0.8",
