--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "jc-customer-service",
-  "version": "0.3.0",
-  "description": "JCPM Customer Service",
+  "name": "nestjs-startkit",
+  "version": "0.4.0",
+  "description": "NestJS Startkit",
   "author": {
     "name": "Mateus Macedo Dos Anjos",
     "email": "macedodosanjosmateus@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/bossabox/jcpm-checkout/jc-customers-service.git"
+    "url": "https://github.com/mateusmacedo/nestjs-startkit.git"
   },
   "bugs": {
-    "url": "https://gitlab.com/bossabox/jcpm-checkout/jc-customers-service/-/issues",
+    "url": "https://github.com/mateusmacedo/nestjs-startkit/issues",
     "email": "macedodosanjosmateus@gmail.com"
   },
-  "private": true,
+  "private": false,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
