--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@nestjs/swagger": "^6.1.1",
     "@nestjs/terminus": "^9.1.1",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^1.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "helmet": "^6.0.0",
