--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "paths": {
-      "@/*": ["src/*"],
-      "@/test/*": ["test/*"]
+      "@app/*": ["src/*"],
+      "@test/*": ["test/*"]
     },
     "strict": true,
     "noImplicitOverride": true,
