--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "joi": "^17.6.0",
     "module-alias": "^2.2.2",
     "mongodb": "^3.7.3",
+    "nestjs-slack": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
